0.2.0
Added messageClass.
Done reframing etc etc.

0.0.0-0.2.0
Internal.