@@ -76,9 +76,28 @@ class LFSWM2_clientClass
 		void				LFSWM2_maxWindow(void);
 		void				LFSWM2_sendCloseWindow(void);
 		void				drawMouseLeave(Window id,Pixmap pm,struct controlData data);
+		void				LFSWM2_resizeControls(void);
+
+		int				dragsize=16;
+		int				smoothness=10;
+
 	private:
+		bool				buttonDown=false;
+		int				sx=0;
+		int				sy=0;
+		int				dw=0;
+		int				dh=0;
 		void				drawMouseEnter(Window id,controlData data,Pixmap pm);
-		bool				doTLDrag(XEvent *e);
+		bool				doSizeDrag(XEvent *e);
+		bool				doSizeDragBRD(XEvent *e);
+		bool				doSizeDragger(XEvent *e);
+		void				setWindowRects(bool resize=true);
+		void				adjustContentWindow(void);
+		Window			wireframe=0;
+		Pixmap			back;
+		XImage			*image;
+		int				steps;
+
 };
 
 #endif
