@@ -1,4 +1,6 @@
 0.2.0
+Done bottom drag-resize.
+Done corner drag-resize.
 Added messageClass.
 Done reframing etc etc.
 
